ADD(ksg) : ES 검색기능 구현 완료 -> totalNum 받아오는 것만 구현 하면됨 #3