@@ -2,7 +2,6 @@ package com.example.meongnyangbook.shop.item.search;
 
 import com.example.meongnyangbook.shop.item.ItemCategoryEnum;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
@@ -15,12 +14,15 @@ import org.springframework.stereotype.Component;
 
 @RequiredArgsConstructor
 @Component
-public class CustomItemSearchRepositoryImpl {
+public class CustomItemSearchRepositoryImpl implements
+    CustomItemSearchRepository {
 
   private final ElasticsearchOperations elasticsearchOperations;
 
 
-  public List<ItemDocument> searchByItem(String keyword, ItemCategoryEnum category, Long min,
+  @Override
+  public List<ItemDocument> searchByItem(String keyword, ItemCategoryEnum category,
+      Long min,
       Long max,
       Pageable pageable) {
     Criteria criteria = new Criteria();
@@ -41,10 +43,14 @@ public class CustomItemSearchRepositoryImpl {
       criteria = criteria.and("price").lessThanEqual(max);
     }
 
-    Query query = new CriteriaQuery(criteria).setPageable(pageable);
-    SearchHits<ItemDocument> search = elasticsearchOperations.search(query, ItemDocument.class);
+    Query query = new CriteriaQuery(criteria).setPageable(pageable); // 페이징 처리
+
+    SearchHits<ItemDocument> search = elasticsearchOperations.search(query,
+        ItemDocument.class); // 조건 검색
+
     return search.stream()
         .map(SearchHit::getContent)
-        .collect(Collectors.toList());
+        .toList();
+
   }
 }
